[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "snyk-package-manager-cicd-check-and-report"
version = "0.1.0"
authors = [
  { name="Fritz Abélard", email="your.email@example.com" },
]
description = "Python scripts for Snyk CI/CD gating and API-driven reporting."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "requests",
  "packaging"
]
